# read-it-now-bot

./: .gitignore  Cargo.toml  README.md  config.example.json
src/: config.rs  main.rs  pocket.rs
