[package]
name = "read-it-now-bot"
version = "0.1.0"
authors = ["BennyYip <yebenmy@protonmail.com>"]

[[bin]]
name = "rin"
path = "src/main.rs"

[dependencies]
telebot = {path = "./telebot"}
reqwest = "*"
rand = "*"
error-chain = "*"
futures = "*"
tokio-core = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"

